--- a/android-basics-kotlin-mars-photos-app-starter/app/build.gradle
+++ b/android-basics-kotlin-mars-photos-app-starter/app/build.gradle
@@ -65,7 +65,9 @@ dependencies {
 
     // Retrofit with Moshi Converter
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-
     // Moshi
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
+    // Coil
+    implementation 'io.coil-kt:coil:2.0.0-rc02'
+
 }
