--- a/android-basics-kotlin-mars-photos-app-starter/local.properties
+++ b/android-basics-kotlin-mars-photos-app-starter/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 11 16:00:21 SGT 2022
-sdk.dir=C\:\\Users\\ramabena\\AppData\\Local\\Android\\Sdk
+#Mon Apr 11 22:43:54 SGT 2022
+sdk.dir=C\:\\Users\\ramab\\AppData\\Local\\Android\\Sdk
