--- a/android-basics-kotlin-mars-photos-app-starter/app/build.gradle
+++ b/android-basics-kotlin-mars-photos-app-starter/app/build.gradle
@@ -69,5 +69,7 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
     // Coil
     implementation 'io.coil-kt:coil:2.0.0-rc02'
+    // diff util
+    implementation 'androidx.leanback:leanback:1.0.0'
 
 }
