--- a/android-basics-kotlin-mars-photos-app-starter/app/build.gradle
+++ b/android-basics-kotlin-mars-photos-app-starter/app/build.gradle
@@ -49,6 +49,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    sourceSets {
+        test.resources.srcDirs += 'src/test/res'
+    }
 }
 
 dependencies {
@@ -71,5 +75,11 @@ dependencies {
     implementation 'io.coil-kt:coil:2.0.0-rc02'
     // diff util
     implementation 'androidx.leanback:leanback:1.0.0'
+
+    // Test
+    testImplementation 'junit:junit:4.12'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
 
 }
